# soroban-starter-kit

./: .env.example  .eslintrc.js  .gitignore  Cargo.toml  IMPLEMENTATION_GUIDE.md  OFFLINE_IMPLEMENTATION.md  OFFLINE_VERIFICATION.md  QUICK_START_STATE_OPTIMIZATION.md  SEARCH_IMPLEMENTATION.md  SEARCH_SYSTEM.md  STATE_OPTIMIZATION.md  STATE_OPTIMIZATION_SUMMARY.md  docs-report.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  infra.yml
contracts/escrow/: Cargo.toml
contracts/token/: Cargo.toml
docker/: Dockerfile  Dockerfile.contracts  docker-compose.yml
docs/: DOCUMENTATION_BEST_PRACTICES.md  DOCUMENTATION_STANDARDS.md  deployment-guide.md  dev-environment.md  infrastructure.md  integration-guide.md  responsive-design-system.md
infra/policies/: compliance.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
public/locales/: ar-SA.json  de-DE.json  en-US.json  es-ES.json  fa-IR.json  fr-FR.json  he-IL.json  ja-JP.json  pt-BR.json  zh-CN.json
scripts/: check-docs.mjs  deploy.sh  generate-guides.mjs  infra.sh  local-net.sh  setup.sh
src/: App.tsx  main.tsx  sw.ts  vite-env.d.ts
src/builder/: DashboardBuilder.tsx  DashboardCell.tsx  types.ts  useLayoutBuilder.ts
src/components/: AccessibilityDashboard.tsx  AccessibilityPanel.tsx  AdminPanel.tsx  AdvancedBalanceDisplay.tsx  AlertRules.tsx  ApiGatewayPortal.tsx  Breadcrumb.tsx  CMSDashboard.tsx  Chart.tsx  ComponentDocs.tsx  ContextualNav.tsx  Dashboard.tsx  DocAnalyticsDashboard.tsx  ErrorBoundary.tsx  (+41 more)
(+203 files in other folders)
